fix draftplan templates

--- a/server/events/templates/draftplan_success_unwrapped.tmpl
+++ b/server/events/templates/draftplan_success_unwrapped.tmpl
@@ -3,5 +3,5 @@
 {{ if .EnableDiffMarkdownFormat }}{{ .DiffMarkdownFormattedTerraformOutput }}{{ else }}{{ .TerraformOutput }}{{ end }}
 ```
 
-{{ template "diverged" . }}
+{{ template "mergedAgain" . }}
 {{ end -}}
